aggiunta nav html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <title>Claudio Capi</title>
   </head>
   <body>
+    <div class="page">
+      <header>
+        <nav>
+          <ul>
+            <li><a href='#'>About</a></li>
+            <li><a href='#'>Percorso</a></li>
+            <li><a href='#'>Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+
+
+
+
+
+      <footer>
+
+      </footer>
+    </div>
 
   </body>
 </html>
