--- a/contatti/index.html
+++ b/contatti/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Claudio Capi - Home</title>
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <title>Claudio Capi - Contatti</title>
   </head>
   <body>
     <div class="page">
@@ -13,12 +13,15 @@
             <li><a href='../'>Home</a></li>
             <li><a href='#'>About</a></li>
             <li><a href='#'>Percorso</a></li>
-            <li><a href='./contatti'>Contact</a></li>
+            <li><a href='#'>Contact</a></li>
           </ul>
         </nav>
       </header>
 
-      <h1>Home Page</h1>
+      <h1>Contatti</h1>
+
+
+
 
       <footer>
 
